--- a/templates/packages/delete.html
+++ b/templates/packages/delete.html
@@ -16,7 +16,7 @@
         <p>
             {{
                 "Use this form to delete the package base %s%s%s and "
-                "the following packages from the AUR: "
+                "the following packages from the MPR: "
                 | tr | format("<strong>", pkgbase.Name, "</strong>") | safe
             }}
         </p>
