--- a/templates/partials/archdev-navbar.html
+++ b/templates/partials/archdev-navbar.html
@@ -5,7 +5,7 @@
             <li><a href="/">{% trans %}Dashboard{% endtrans %}</a></li>
         {% else %}
             {# Only guest users get Home #}
-            <li><a href="/">AUR {% trans %}Home{% endtrans %}</a></li>
+            <li><a href="/">MPR {% trans %}Home{% endtrans %}</a></li>
         {% endif %}
 
         {# All users see Packages #}
