--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -18,5 +18,5 @@
     <!-- On-the-fly comment editing functions -->
     <script type="text/javascript" src="/static/js/comment-edit.js"></script>
 
-    <title>AUR ({{ language }}) - {{ title | tr }}</title>
+    <title>MPR ({{ language }}) - {{ title | tr }}</title>
 </head>
