--- a/templates/partials/set_lang.html
+++ b/templates/partials/set_lang.html
@@ -1,4 +1,4 @@
-<div id="lang_sub">
+<div id="lang_sub" style="visibility: hidden">
     <form method="post" action="/language">
         <fieldset>
             <div>
