--- a/templates/tos/index.html
+++ b/templates/tos/index.html
@@ -2,7 +2,7 @@
 
 {% block pageContent %}
     <div id="dev-login" class="box">
-        <h2>AUR {% trans %}Terms of Service{% endtrans %}</h2>
+        <h2>MPR {% trans %}Terms of Service{% endtrans %}</h2>
         <form method="post" action="/tos">
             <fieldset>
                 <p>
