--- a/templates/home.html
+++ b/templates/home.html
@@ -1,64 +1,57 @@
 <div id="intro" class="box">
-    <h2>AUR  {% trans %}Home{% endtrans %}</h2>
+    <h2>MPR  {% trans %}Home{% endtrans %}</h2>
     <p>
-        {{ "Welcome to the AUR! Please read the %sAUR User Guidelines%s and %sAUR TU Guidelines%s for more information."
+        {{ "Welcome to the MPR! See the %sMPR page in the makedeb docs%s for more information."
             | tr
-            | format('<a href="https://wiki.archlinux.org/title/AUR_User_Guidelines">', "</a>",
-                     '<a href="https://wiki.archlinux.org/title/AUR_Trusted_User_Guidelines">', "</a>")
+            | format('<a href="https://makedeb.hunterwittenborn.com/mpr/introduction/">', "</a>")
             | safe 
         }}
-        {{ "Contributed PKGBUILDs %smust%s conform to the %sArch Packaging Standards%s otherwise they will be deleted!"
+        {{ "Welcome to the MPR! Contributed PKGBUILDs %smust%s conform to the %sMPR user guidelines%s; otherwise they will be deleted!"
             | tr
 	    | format("<strong>", "</strong>",
-		     '<a href="https://wiki.archlinux.org/title/Arch_Packaging_Standards">',
+		     '<a href="https://makedeb.hunterwittenborn.com/mpr/mpr-user-guidelines/marking-maintainers-in-a-pkgbuild/">',
 		     "</a>")
             | safe
         }}
-        {% trans %}Remember to vote for your favourite packages!{% endtrans %}
-        {% trans %}Some packages may be provided as binaries in [community].{% endtrans %}
+     </p>
+     <p>
+        {% trans %}Remember to vote for your favorite packages!{% endtrans %}
     </p>
     <p class="important">
         {% trans %}DISCLAIMER{% endtrans %}:
-        {% trans %}AUR packages are user produced content. Any use of the provided files is at your own risk.{% endtrans %}
+        {% trans %}MPR packages are user produced content. Any use of the provided files is at your own risk.{% endtrans %}
     </p>
-    <p class="readmore"><a href="https://wiki.archlinux.org/title/AUR">{% trans %}Learn more...{% endtrans %}</a></p>
+    <p class="readmore"><a href="https://makedeb.hunterwittenborn.com/mpr/introduction/">{% trans %}Learn more...{% endtrans %}</a></p>
 </div>
+
+<div id="news">
+    <h3><a>{% trans %}News{% endtrans %}</a><span class="arrow"></span></h3>
+    <h4>{% trans %}Beta Testing{% endtrans %}</h4>
+    <div class="article-content">
+    <p>
+    	{{ "The MPR is currently being powered by the Python rewrite of the AUR interface. If you have any issues, report a bug in the issue tracker (linked under %sBug Reporting%s in "
+    	    | tr
+    	    | format("<strong>", "</strong>")
+    	    | safe
+    	}}<strong>{% trans %}Support{% endtrans %}</strong>{{ ")." }}
+    </p>
+    </div>
+</div>
+
 <div id="news">
     <h3><a>{% trans %}Support{% endtrans %}</a><span class="arrow"></span></h3>
-    <h4>{% trans %}Package Requests{% endtrans %}</h4>
-    <div class="article-content">
-        <p>
-        {{ "There are three types of requests that can be filed in the %sPackage Actions%s box on the package details page:"
-           | tr
-           | format("<var>", "</var>")
-           | safe
-        }}
-        </p>
-        <ul>
-            <li><em>{% trans %}Orphan Request{% endtrans %}</em>: {% trans %}Request a package to be disowned, e.g. when the maintainer is inactive and the package has been flagged out-of-date for a long time.{% endtrans %}</li>
-            <li><em>{% trans %}Deletion Request{% endtrans %}</em>: {%trans %}Request a package to be removed from the Arch User Repository. Please do not use this if a package is broken and can be fixed easily. Instead, contact the package maintainer and file orphan request if necessary.{% endtrans %}</li>
-            <li><em>{% trans %}Merge Request{% endtrans %}</em>: {% trans %}Request a package to be merged into another one. Can be used when a package needs to be renamed or replaced by a split package.{% endtrans %}</li>
-	</ul>
-        <p>
-	{{ "If you want to discuss a request, you can use the %saur-requests%s mailing list. However, please do not use that list to file requests."
-           | tr
-           | format('<a href="https://mailman.archlinux.org/mailman/listinfo/aur-requests">', "</a>")
-           | safe
-        }}
-        </p>
-    </div>
     <h4>{% trans %}Submitting Packages{% endtrans %}</h4>
     <div class="article-content">
     <p>
-        {{ "Git over SSH is now used to submit packages to the AUR. See the %sSubmitting packages%s section of the Arch User Repository ArchWiki page for more details."
+        {{ "Git over SSH is used to submit packages to the MPR. See the %sUploading PKGBUILDs%s section of the makedeb docs for more details."
            | tr
-           | format('<a href="https://wiki.archlinux.org/title/Arch_User_Repository#Submitting_packages">', "</a>")
+           | format('<a href="https://makedeb.hunterwittenborn.com/mpr/using-the-mpr/uploading-pkgbuilds/">', "</a>")
            | safe
         }}
     </p>
     {% if ssh_fingerprints %}
         <p>
-            {% trans %}The following SSH fingerprints are used for the AUR:{% endtrans %}
+            {% trans %}The following SSH fingerprints are used for the MPR:{% endtrans %}
         <p>
         <ul>
         {% for keytype in ssh_fingerprints %} 
@@ -70,10 +63,10 @@
     <h4>{% trans %}Discussion{% endtrans %}</h4>
     <div class="article-content">
         <p>
-        {{ "General discussion regarding the Arch User Repository (AUR) and Trusted User structure takes place on %saur-general%s. For discussion relating to the development of the AUR web interface, use the %saur-dev%s mailing list."
+        {{ "General discussion regarding the makedeb Package Repository (MPR) takes place in %s#makedeb-mpr:hunterwittenborn.com%s on Matrix. For discussion relating to the development of the MPR, use %s#makedeb-contributing:hunterwittenborn.com%s."
            | tr
-           | format('<a href="https://mailman.archlinux.org/mailman/listinfo/aur-general">', "</a>",
-                    '<a href="https://mailman.archlinux.org/mailman/listinfo/aur-dev">', "</a>")
+           | format('<a href="https://matrix.to/#/#makedeb-mpr:hunterwittenborn.com">', "</a>",
+                    '<a href="https://matrix.to/#/#makedeb-contributing:hunterwittenborn.com">', "</a>")
            | safe
         }}
         <p>
@@ -81,9 +74,9 @@
     <h4>{% trans %}Bug Reporting{% endtrans %}</h4>
     <div class="article-content">
         <p>
-        {{ "If you find a bug in the AUR web interface, please fill out a bug report on our %sbug tracker%s. Use the tracker to report bugs in the AUR web interface %sonly%s. To report packaging bugs contact the package maintainer or leave a comment on the appropriate package page."
+        {{ "If you find a bug in the MPR interfaces (i.e. the web UI, SSH interface), please file a bug report via the %sissue tracker%s on GitHub. Use the tracker to report bugs for the MPR's interfaces %sonly%s. To report packaging bugs, contact the package maintainer or leave a comment on the appropriate package's page."
            | tr
-           | format('<a href="https://bugs.archlinux.org/index.php?project=2">', "</a>",
+           | format('<a href="https://github.com/makedeb/mprweb/issues">', "</a>",
                     "<strong>", "</strong>")
            | safe 
         }}
