--- a/templates/packages/comments/edit.html
+++ b/templates/packages/comments/edit.html
@@ -14,7 +14,7 @@
                 <p>
                     {{
                         "Git commit identifiers referencing commits in "
-                        "the AUR package repository and URLs are converted "
+                        "the MPR package repository and URLs are converted "
                         "to links automatically." | tr
                     }}
                     {{
