--- a/templates/packages/flag.html
+++ b/templates/packages/flag.html
@@ -23,7 +23,7 @@
                 {# TODO: This error is not yet translated. #}
                 {{
                     "This seems to be a VCS package. Please do %snot%s flag "
-                    "it out-of-date if the package version in the AUR does "
+                    "it out-of-date if the package version in the MPR does "
                     "not match the most recent commit. Flagging this package "
                     "should only be done if the sources moved or changes in "
                     "the PKGBUILD are required because of recent upstream "
