--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <div id="footer">
     <p>
-        aurweb <a href="https://git.archlinux.org/aurweb.git/log/?h={{ config.AURWEB_VERSION }}">{{ config.AURWEB_VERSION }}</a>
+        mprweb <a href="https://github.com/makedeb/mprweb/">{{ config.AURWEB_VERSION }}</a>
         {% if commit_hash %}
             -
             {% if commit_url %}
@@ -12,6 +12,7 @@
             {% endif %}
         {% endif %}
     </p>
+    <p>Copyright &copy; 2021-{{ now.strftime("%Y") }} Hunter Wittenborn.</p>
     <p>Copyright &copy; 2004-{{ now.strftime("%Y") }} aurweb Development Team.</p>
-    <p>{% trans %}AUR packages are user produced content. Any use of the provided files is at your own risk.{% endtrans %}</p>
+    <p>{% trans %}MPR packages are user produced content. Any use of the provided files is at your own risk.{% endtrans %}</p>
 </div>
