--- a/templates/partials/packages/comment_form.html
+++ b/templates/partials/packages/comment_form.html
@@ -15,7 +15,7 @@ Routes:
     <fieldset>
         <input type="hidden" name="next" value="{{ next }}" />
         <p>
-            {{ "Git commit identifiers referencing commits in the AUR package "
+            {{ "Git commit identifiers referencing commits in the MPR package "
             "repository and URLs are converted to links automatically." | tr }}
             {{ "%sMarkdown syntax%s is partially supported." | tr
             | format('<a href="https://daringfireball.net/projects/markdown/syntax">',
