--- a/templates/partials/packages/widgets/updates.html
+++ b/templates/partials/packages/widgets/updates.html
@@ -6,11 +6,11 @@
         </span>
     </h3>
     <a class="rss-icon latest" href="/rss"
-       title="AUR Latest Packages RSS Feed">
+       title="MPR Latest Packages RSS Feed">
         <img src="/static/images/rss.svg" alt="RSS Feed" />
     </a>
     <a class="rss-icon" href="/rss/modified"
-       title="AUR Modified Packages RSS Feed">
+       title="MPR Modified Packages RSS Feed">
         <img src="/static/images/rss.svg" alt="RSS Feed" />
     </a>
 
