--- a/web/html/css/aurweb.css
+++ b/web/html/css/aurweb.css
@@ -70,7 +70,7 @@
 	padding: 0 !important;
 	font: normal 100% sans-serif;
 	text-decoration: none;
-	color: #07b;
+	color: #E95420;
 	cursor: pointer;
 }
 
