--- a/web/template/cgit/footer.html
+++ b/web/template/cgit/footer.html
@@ -1,6 +1,7 @@
 <div id="footer">
 	<p>
-		Copyright &copy; 2004-2020 aurweb Development Team &ndash;
-		<strong>AUR packages are user produced content. Any use of the provided files is at your own risk.</strong>
+        Copyright &copy; Hunter Wittenborn &ndash;
+		Copyright &copy; aurweb Development Team &ndash;
+		<strong>MPR packages are user produced content. Any use of the provided files is at your own risk.</strong>
 	</p>
 </div>
