--- a/web/template/cgit/footer.html
+++ b/web/template/cgit/footer.html
@@ -1,7 +1,5 @@
 <div id="footer">
-	<p>
-        Copyright &copy; Hunter Wittenborn &ndash;
-		Copyright &copy; aurweb Development Team &ndash;
-		<strong>MPR packages are user produced content. Any use of the provided files is at your own risk.</strong>
-	</p>
+	<p>Copyright &copy; Hunter Wittenborn &ndash;</p>
+	<p>Copyright &copy; aurweb Development Team &ndash;</p>
+	<p><strong>MPR packages are user produced content. Any use of the provided files is at your own risk.</strong></p>
 </div>
