--- a/web/html/css/aurweb.css
+++ b/web/html/css/aurweb.css
@@ -239,7 +239,7 @@ form.link, form.link button {
 }
 form.link button {
     padding: 0 0.5em;
-    color: #07b;
+    color: #E95420;
     background: none;
     border: none;
     font-family: inherit;
