Replaced 'Search wiki' text with 'Search ArchWiki' on package pages

--- a/templates/partials/packages/actions.html
+++ b/templates/partials/packages/actions.html
@@ -21,7 +21,7 @@
             </li>
             <li>
                 <a href="https://wiki.archlinux.org/title/Special:Search?search={{ pkgbase.Name }}">
-                    {{ "Search wiki" | tr }}
+                    {{ "Search ArchWiki" | tr }}
                 </a>
             </li>
             {% if not out_of_date %}
