--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -6,9 +6,10 @@
     </div>
     <div id="archnavbarmenu">
         <ul id="archnavbarlist">
+	    <li id="anb-download"><a href="https://www.makedeb.org">{% trans %}Homepage{% endtrans %}</a></li>
+            <li id="anb-security"><a href="https://docs.makedeb.org/">{% trans %}Docs{% endtrans %}</a></li>
+            <li id="anb-download"><a href="https://matrix.to/#/#makedeb:hunterwittenborn.com">{% trans %}Support{% endtrans %}</a></li>
             <li id="anb-aur"><a href="/" title="makedeb Package Repository">MPR</a></li>
-            <li id="anb-security"><a href="https://makedeb.hunterwittenborn.com/" title="makedeb Docs">{% trans %}makedeb Docs{% endtrans %}</a></li>
-            <li id="anb-download"><a href="https://matrix.to/#/#makedeb:hunterwittenborn.com" title="Get Support">{% trans %}Support{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
