--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,9 @@
             {% endif %}
         </div>
     </div>
-    <div id="content-right">
-        {% include 'partials/packages/search_widget.html' %}
+    <!-- div id="content-right">
         {% include 'partials/packages/updates.html' %}
         {% include 'partials/packages/statistics.html' %}
-    </div>
+    </div --!>
 
 {% endblock %}
