--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -2,11 +2,10 @@
     {% include 'partials/meta.html' %}
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/static/css/archweb.css">
-    <link rel="stylesheet" href="/static/css/aurweb.css">
+    <link rel="stylesheet" href="/static/media/css/style.css">
 
     <!-- Resources -->
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <link rel="shortcut icon" href="/static/media/images/makedeb-logo.png">
 
     <!-- Alternate resources -->
     <link rel="alternate" type="application/rss+xml"
