--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -5,9 +5,10 @@
 	</a>
 	
 	<div class="links">
-		<a href="https://www.makedeb.org">Homepage</a>
-		<a href="https://docs.makedeb.org">Docs</a>
+		<a href="https://www.{{ makedeb_url }}">Homepage</a>
+		<a href="https://docs.{{ makedeb_url }}">Docs</a>
 		<p>MPR</p>
+		<a href="https://www.{{ makedeb_url }}/news">News</a>
 	</div>
 </header>
 <hr class="header-hr">
