--- a/media/scss/archdev-navbar.scss
+++ b/media/scss/archdev-navbar.scss
@@ -1,9 +1,12 @@
 @import "variables";
 
+$navbar-mobile-width: 720px;
+
 .archdev-navbar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin-bottom: 2em;
 
 	@media (max-width: 580px) {
 		flex-direction: column;
@@ -14,16 +17,38 @@
 		height: 100%;
 		width: 100%;
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: left;
+		align-items: center;
 		padding: 1em 0;
 		padding-left: 0.4em;
 
-		@media (max-width: 580px) {
+		@media (max-width: $navbar-mobile-width) {
 			justify-content: center;
+			padding-left: 0;
 		}
 
 		a, form {
 			margin: 0 0.4em;
+		}
+
+		p, form button {
+			line-height: 1.4em;
+		}
+		
+		// We have to stylize our button so that it looks like a normal link.
+		form button {
+			background: none;
+			border: none;
+			font-size: 1em;
+			color: $orange;
+			transition-property: color;
+			transition-duration: 0.2s;
+
+			&:hover {
+				cursor: pointer;
+				color: $orange-hover;
+			}
 		}
 	}
 
@@ -39,7 +64,7 @@
 		transition-property: outline-width;
 		transition-duration: 0.2s;
 
-		@media (max-width: 580px) {
+		@media (max-width: $navbar-mobile-width) {
 			display: none;
 		}
 	}
