--- a/templates/account/show.html
+++ b/templates/account/show.html
@@ -1,118 +1,95 @@
-{% extends "partials/layout.html" %}
+<!DOCTYPE html>
+<html>
+	{% include "partials/head.html" %}
+	{% include "partials/navbar.html" %}
+	{% include "partials/archdev-navbar.html" %}
+	
+	<div class="box">
+		<h2>{% trans %}Accounts{% endtrans %} - {{ user.Username }}</h2>
+		<hr>
+		{% if not request.user.is_authenticated() %}
+			{% trans %}You must log in to view user information.{% endtrans %}
+		{% else %}
+		<div class="arch-bio-entry">
+			<div class="item">
+				<p class="caption">{% trans %}Username{% endtrans %}:</p>
+				<p class="data">{{ user.Username }}</p>
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}Account Type{% endtrans %}:</p>
+				<p class="data">{{ user.AccountType }}</p>
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}Email Address{% endtrans %}:</p>
+				<p class="data"><a href="mailto:{{ user.Email }}">{{ user.Email }}</a></p>
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}Real Name{% endtrans %}:</p>
+				{% if user.Realname != "" %}
+				<p class="data">{{ user.Realname }}</p>
+				{% else %}
+				<p class="data">None</p>
+				{% endif %}
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}Homepage{% endtrans %}:</p>
+				{% if user.Homepage %}
+				<p class="data"><a href="{{ user.Homepage }}" rel="nofollow">{{ user.Homepage }}</a></p>
+				{% else %}
+				<p class="data">None</p>
+				{% endif %}
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}IRC Nick{% endtrans %}:</p>
+				{% if user.IRCNick %}
+				<p class="data">{{ user.IRCNick }}</p>
+				{% else %}
+				<p class="data">None</p>
+				{% endif %}
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}PGP Key Fingerprint{% endtrans %}:</p>
+				{% if pgp_key != "" %}
+				<p class="data">{{ pgp_key }}</p>
+				{% else %}
+				<p class="data">None</p>
+				{% endif %}
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}Status{% endtrans %}:</p>
+				{% if not user.InactivityTS %}
+				<p class="data">{{ "Active" | tr }}</p>
+				{% else %}
+				{% set inactive_ds = user.InactivityTS | dt | as_timezone(timezone) %}
+				<p class="data">{{ "Inactive since %s" | tr | format(inactive_ds.strftime("%Y-%m-%d %H:%M")) }}</p>
+				{% endif %}
+			</div>
+			<div class="item">
+				<p class="caption">{% trans %}Registration date{% endtrans %}:</p>
+				<p class="data">{{ user.RegistrationTS.strftime("%Y-%m-%d") }}</p>
+			</div>
+			{% if login_ts %}
+			<div class="item">
+				<p class="caption">{% trans %}Last Login{% endtrans %}:</p>
+				{% set login_ds = login_ts | dt | as_timezone(timezone) %}
+				<p class="data">{{ login_ds.strftime("%Y-%m-%d") }}</p>
+			</div>
+			{% endif %}
+			<div class="item">
+				<p class="caption">{% trans %}Links{% endtrans %}:</p>
 
-{% block pageContent %}
-    <div class="box">
-        <h2>{% trans %}Accounts{% endtrans %}</h2>
-
-        {% if not request.user.is_authenticated() %}
-            {% trans %}You must log in to view user information.{% endtrans %}
-        {% else %}
-            <table class="arch-bio-entry">
-                <tbody>
-                    <tr>
-                        <td>
-                            <h3>{{ user.Username }}</h3>
-                            <table class="bio">
-                                <tbody>
-                                    <tr>
-                                        <th>{% trans %}Username{% endtrans %}:</th>
-                                        <td>{{ user.Username }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}Account Type{% endtrans %}:</th>
-                                        <td>{{ user.AccountType }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}Email Address{% endtrans %}:</th>
-                                        <td>
-                                            <a href="mailto:{{ user.Email }}">{{ user.Email }}</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}Real Name{% endtrans %}:</th>
-                                        <td>{{ user.RealName }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}Homepage{% endtrans %}:</th>
-                                        <td>
-                                            {% if user.Homepage %}
-                                                <a href="{{ user.Homepage }}" rel="nofollow">{{ user.Homepage }}</a>
-                                            {% endif %}
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}IRC Nick{% endtrans %}:</th>
-                                        <td>{{ user.IRCNick }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}PGP Key Fingerprint{% endtrans %}:</th>
-                                        <td>{{ pgp_key }}</td>
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}Status{% endtrans %}:</th>
-                                        {% if not user.InactivityTS %}
-                                            <td>{{ "Active" | tr }}</td>
-                                        {% else %}
-                                            {% set inactive_ds = user.InactivityTS | dt | as_timezone(timezone) %}
-                                            <td>
-                                                {{
-                                                    "Inactive since %s" | tr
-                                                    | format(inactive_ds.strftime("%Y-%m-%d %H:%M"))
-                                                }}
-                                            </td>
-                                        {% endif %}
-                                    </tr>
-                                    <tr>
-                                        <th>{% trans %}Registration date{% endtrans %}:</th>
-                                        <td>
-                                            {{ user.RegistrationTS.strftime("%Y-%m-%d") }}
-                                        </td>
-                                    </tr>
-                                    {% if login_ts %}
-                                        <tr>
-                                            <th>{% trans %}Last Login{% endtrans %}:</th>
-                                            {% set login_ds = login_ts | dt | as_timezone(timezone) %}
-                                            <td>{{ login_ds.strftime("%Y-%m-%d") }}</td>
-                                        </tr>
-                                    {% endif %}
-                                    <tr>
-                                        <th>{% trans %}Links{% endtrans %}:</th>
-                                        <td>
-                                            <ul>
-                                                <li>
-                                                    {{ "%sView this user's packages%s"
-                                                    | tr
-                                                    | format('<a href="/packages/?K=%s&SeB=m">' | format(user.Username), "</a>")
-                                                    | safe
-                                                    }}
-                                                </li>
-                                                {% if request.user.can_edit_user(user) %}
-                                                    <li>
-                                                        {{ "%sEdit this user's account%s"
-                                                        | tr
-                                                        | format('<a href="/account/%s/edit">' | format(user.Username), "</a>")
-                                                        | safe
-                                                        }}
-                                                    </li>
-                                                {% endif %}
-                                                {% if request.user.has_credential(creds.ACCOUNT_LIST_COMMENTS, approved=[user]) %}
-                                                    <li>
-                                                        {{ "%sList this user's comments%s"
-                                                        | tr
-                                                        | format('<a href="/account/%s/comments">' | format(user.Username), "</a>")
-                                                        | safe
-                                                        }}
-                                                    </li>
-                                                {% endif %}
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        {% endif %}
-    </div>
-{% endblock %}
+				<div class="multidata">
+					<p class="data">{{ "%sView this user's packages%s" | tr | format('<a href="/packages/?K=%s&SeB=m">' | format(user.Username), "</a>") | safe }}</p>
+					{% if request.user.can_edit_user(user) %}
+					<p class="data">{{ "%sEdit this user's account%s" | tr | format('<a href="/account/%s/edit">' | format(user.Username), "</a>") | safe }}</p>
+					{% endif %}
+					{% if request.user.has_credential(creds.ACCOUNT_LIST_COMMENTS, approved=[user]) %}
+					<p class="data">{{ "%sList this user's comments%s" | tr | format('<a href="/account/%s/comments">' | format(user.Username), "</a>") | safe }}</p>
+					{% endif %}
+				</div>
+			</div>
+		</div>
+		{% endif %}
+	</div>
+	{% include "partials/footer.html" %}
+</html>
