--- a/templates/partials/account/comment.html
+++ b/templates/partials/account/comment.html
@@ -1,40 +1,33 @@
 {% set header_cls = "comment-header" %}
 {% if comment.Deleter %}
-    {% set header_cls = "%s %s" | format(header_cls, "comment-deleted") %}
+	{% set header_cls = "%s %s" | format(header_cls, "comment-deleted") %}
 {% endif %}
 
 {% if not comment.Deleter or request.user.has_credential(creds.COMMENT_VIEW_DELETED, approved=[comment.Deleter]) %}
 
-    {% set commented_at = comment.CommentTS | dt | as_timezone(timezone) %}
-    <h4 id="comment-{{ comment.ID }}" class="{{ header_cls }}">
-        {{
-            "Commented on package %s%s%s on %s%s%s" | tr
-            | format(
-                '<a href="/pkgbase/%s">' | format(comment.PackageBase.Name),
-                comment.PackageBase.Name,
-                "</a>",
-                '<a href="/account/%s/comments#comment-%s">' | format(
-                    username,
-                    comment.ID
-                ),
-                commented_at.strftime("%Y-%m-%d %H:%M"),
-                "</a>"
-            ) | safe
-        }}
-        {% if comment.Editor %}
-            {% set edited_on = comment.EditedTS | dt | as_timezone(timezone) %}
-            <span class="edited">
-                ({{ "edited on %s by %s" | tr
-                | format(edited_on.strftime('%Y-%m-%d %H:%M'),
-                '<a href="/account/%s">%s</a>' | format(
-                comment.Editor.Username, comment.Editor.Username))
-                | safe
-                }})
-            </span>
-        {% endif %}
-
-        {% include "partials/comment_actions.html" %}
-    </h4>
+	{% set commented_at = comment.CommentTS | dt | as_timezone(timezone) %}
+	<hr class="comment-hr">
+	<h4 id="comment-{{ comment.ID }}" class="{{ header_cls }}">
+		<div class="comment-title">
+			<p class="comment-intro">Commented on package <a href="/pkgbase/{{ comment.PackageBase.Name }}">{{ comment.PackageBase.Name }}</a> on <a href="/account/{{ username }}/comments=#comment-{{ comment.ID }}">{{ commented_at.strftime("%Y-%m-%d at %H:%M") }}</a></p>
+			{% if comment.Editor %}
+			{% set edited_on = comment.EditedTS | dt | as_timezone(timezone) %}
+			<span class="edited"><em>
+				{{ "edited on %s by %s" | tr
+				| format(edited_on.strftime('%Y-%m-%d %H:%M'),
+				'<a href="/account/%s">%s</a>' | format(
+				comment.Editor.Username, comment.Editor.Username))
+				| safe
+				}}
+			</em></span>
+			{% endif %}
+		</div>
+		
+		<div class="comment-actions">
+			{% include "partials/comment_actions.html" %}
+		</div>
+	</h4>
 
     {% include "partials/comment_content.html" %}
+    {% include "partials/packages/comment_form.html" %}
 {% endif %}
