--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,18 +1,20 @@
 <head>
-    {% include 'partials/meta.html' %}
+	{% include 'partials/meta.html' %}
+	<!-- Syntax highlighting in code blocks -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
+	<script>hljs.highlightAll();</script>
+	
+	<!-- CSS -->
+	<link rel="stylesheet" href="/static/css/style.css">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="/static/media/css/style.css">
+	<!-- Resources -->
+	<link rel="shortcut icon" href="/static/images/makedeb-logo.png">
 
-    <!-- Resources -->
-    <link rel="shortcut icon" href="/static/media/images/makedeb-logo.png">
+	<!-- Alternate resources -->
+	<link rel="alternate" type="application/rss+xml" title="Newest Packages RSS" href="/rss">
 
-    <!-- Alternate resources -->
-    <link rel="alternate" type="application/rss+xml"
-          title="Newest Packages RSS" href="/rss">
+	<!-- Include local typeahead -->
+	<!--script type="text/javascript" src="/static/js/typeahead.js"></script -->
 
-    <!-- Include local typeahead -->
-    <script type="text/javascript" src="/static/js/typeahead.js"></script>
-
-    <title>MPR - {{ title | tr }}</title>
+	<title>MPR - {{ title | tr }}</title>
 </head>
